Variables renaming